feat(hmtl, css, js): fix

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
 			<h3 class="tag-line">We help the environment and stuff&hellip;</h3>
 
-			<nav class="unit unit-xs-1 top-nav" data-state="collapse" role="navigation">
+			<nav id="top-nav" class="unit unit-xs-1 top-nav" data-state="collapse" role="navigation">
 				<ul class=" unit unit-s-1 unit-m-1 unit-l-1">
 					<li class="unit unit-s-1-5 unit-m-1-5 unit-l-1-5"><a href="about.html">About Us</a></li>
 					<li class="unit unit-s-1-5 unit-m-1-5 unit-l-1-5"><a href="what-we-do.html">What We Do</a></li>
