fix(b-nav): content change

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -126,7 +126,7 @@
 
 					<li class="unit unit-s-1 unit-m-1-5 unit-l-1-5"><a href="donate.html">Donations</a>
 						<ul>
-							<li><a href="#">Test</a></li>
+							<li><a href="#">Donate</a></li>
 						</ul>
 					</li>
 				</ul>
